localization/v2.4.x/site/ja/reference/sys_config/configure_querynode.md
---
id: configure_querynode.md
related_key: configure
group: system_configuration.md
summary: MilvusのqueryNodeの設定方法について説明します。
title: ''
---
<h1 id="queryNode-related-Configurations" class="common-anchor-header">queryNode関連設定<button data-href="#queryNode-related-Configurations" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>ベクトルデータとスカラーデータのハイブリッド検索を実行するために使用されるqueryNodeの関連コンフィギュレーション。</p>
<h2 id="queryNodestatspublishInterval" class="common-anchor-header"><code translate="no">queryNode.stats.publishInterval</code><button data-href="#queryNodestatspublishInterval" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.stats.publishInterval">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        クエリ・ノードがセグメント・ステータス、CPU使用率、メモリ使用率、ヘルス・ステータスなどのノード統計情報を公開する間隔。単位：ms      </td>
      <td>1000</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreknowhereThreadPoolNumRatio" class="common-anchor-header"><code translate="no">queryNode.segcore.knowhereThreadPoolNumRatio</code><button data-href="#queryNodesegcoreknowhereThreadPoolNumRatio" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.knowhereThreadPoolNumRatio">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        knowhere のスレッド・プールのスレッド数。ディスクが有効な場合、プール・サイズは knowhereThreadPoolNumRatio([1, 32])と乗算されます。      </td>
      <td>4</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcorechunkRows" class="common-anchor-header"><code translate="no">queryNode.segcore.chunkRows</code><button data-href="#queryNodesegcorechunkRows" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.chunkRows">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Segcoreがセグメントをチャンクに分割する行数。      </td>
      <td>128</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreinterimIndexenableIndex" class="common-anchor-header"><code translate="no">queryNode.segcore.interimIndex.enableIndex</code><button data-href="#queryNodesegcoreinterimIndexenableIndex" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.interimIndex.enableIndex">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>成長しているセグメントやまだインデックスが作成されていないセグメントに対して一時的なインデックスを作成し、検索性能を向上させるかどうか。</li>      
        <li>Milvus は最終的にすべてのセグメントを封印し、インデックスを作成しますが、これを有効にすると、データ挿入直後のクエリの検索パフォーマンスが最適化されます。</li>      
        <li>デフォルトは true で、成長中のセグメントやまだインデックスが作成されていないセグメントに対して一時インデックスを作成します。</li>      </td>
      <td>true</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreinterimIndexnlist" class="common-anchor-header"><code translate="no">queryNode.segcore.interimIndex.nlist</code><button data-href="#queryNodesegcoreinterimIndexnlist" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.interimIndex.nlist">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        一時インデックスnlist、sqrt(chunkRows)を設定することを推奨。      </td>
      <td>128</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreinterimIndexnprobe" class="common-anchor-header"><code translate="no">queryNode.segcore.interimIndex.nprobe</code><button data-href="#queryNodesegcoreinterimIndexnprobe" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.interimIndex.nprobe">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        小さなインデックスを検索するためのnprobe。      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreinterimIndexmemExpansionRate" class="common-anchor-header"><code translate="no">queryNode.segcore.interimIndex.memExpansionRate</code><button data-href="#queryNodesegcoreinterimIndexmemExpansionRate" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.interimIndex.memExpansionRate">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        中間インデックスの構築に必要な余分なメモリ      </td>
      <td>1.15</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreinterimIndexbuildParallelRate" class="common-anchor-header"><code translate="no">queryNode.segcore.interimIndex.buildParallelRate</code><button data-href="#queryNodesegcoreinterimIndexbuildParallelRate" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.interimIndex.buildParallelRate">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        中間インデックス構築の並列処理とCPU数の比率      </td>
      <td>0.5</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodesegcoreknowhereScoreConsistency" class="common-anchor-header"><code translate="no">queryNode.segcore.knowhereScoreConsistency</code><button data-href="#queryNodesegcoreknowhereScoreConsistency" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.segcore.knowhereScoreConsistency">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        Knowhere 強一貫性スコア計算ロジックを有効にする      </td>
      <td>偽</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeloadMemoryUsageFactor" class="common-anchor-header"><code translate="no">queryNode.loadMemoryUsageFactor</code><button data-href="#queryNodeloadMemoryUsageFactor" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.loadMemoryUsageFactor">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        セグメントをロードする際のメモリ使用量を計算する倍率      </td>
      <td>1</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeenableDisk" class="common-anchor-header"><code translate="no">queryNode.enableDisk</code><button data-href="#queryNodeenableDisk" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.enableDisk">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        querynodeがディスクインデックスをロードし、ディスクインデックスを検索することを有効にする。      </td>
      <td>false</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodecachememoryLimit" class="common-anchor-header"><code translate="no">queryNode.cache.memoryLimit</code><button data-href="#queryNodecachememoryLimit" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.cache.memoryLimit">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        2 GB、2 * 1024 * 1024 * 1024    </td>
      <td>2147483648</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodecachereadAheadPolicy" class="common-anchor-header"><code translate="no">queryNode.cache.readAheadPolicy</code><button data-href="#queryNodecachereadAheadPolicy" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.cache.readAheadPolicy">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        チャンクキャッシュの先読みポリシー：normal、random、sequential、willneed、dontneed`。      </td>
      <td>ウィルニード</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodecachewarmup" class="common-anchor-header"><code translate="no">queryNode.cache.warmup</code><button data-href="#queryNodecachewarmup" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.cache.warmup">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>オプション: async、sync、disable。 </li>      
        <li>チャンクキャッシュのウォームアップの必要性を指定する。 </li>      
        <li>1.sync "または "async "に設定された場合、オリジナルのベクトル・データはロード処理中に同期／非同期でチャンク・キャッシュにロードされる。 </li>      
        <li>チャンクキャッシュに同期／非同期でロードされる。このアプローチは、ロード後の特定の期間、クエリ/検索の待ち時間を大幅に短縮する可能性がある。</li>      
        <li>を大幅に短縮する可能性がある。ただし、同時にディスク使用量が増加する；</li>      
        <li>2.disable "に設定すると、オリジナルのベクターデータは検索/クエリ中にのみチャンクキャッシュにロードされます。</li>      </td>
      <td>無効</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodemmapmmapEnabled" class="common-anchor-header"><code translate="no">queryNode.mmap.mmapEnabled</code><button data-href="#queryNodemmapmmapEnabled" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.mmap.mmapEnabled">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        データをロードするためにmmapを有効にする      </td>
      <td>false</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodemmapgrowingMmapEnabled" class="common-anchor-header"><code translate="no">queryNode.mmap.growingMmapEnabled</code><button data-href="#queryNodemmapgrowingMmapEnabled" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.mmap.growingMmapEnabled">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        生データを成長させるためにmmapを使用可能にする      </td>
      <td>false</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodemmapfixedFileSizeForMmapAlloc" class="common-anchor-header"><code translate="no">queryNode.mmap.fixedFileSizeForMmapAlloc</code><button data-href="#queryNodemmapfixedFileSizeForMmapAlloc" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.mmap.fixedFileSizeForMmapAlloc">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        mmapチャンクマネージャのtmpファイルサイズ      </td>
      <td>1</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodemmapmaxDiskUsagePercentageForMmapAlloc" class="common-anchor-header"><code translate="no">queryNode.mmap.maxDiskUsagePercentageForMmapAlloc</code><button data-href="#queryNodemmapmaxDiskUsagePercentageForMmapAlloc" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.mmap.maxDiskUsagePercentageForMmapAlloc">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        mmap チャンクマネージャーで使用されるディスクのパーセンテージ      </td>
      <td>50</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodelazyloadenabled" class="common-anchor-header"><code translate="no">queryNode.lazyload.enabled</code><button data-href="#queryNodelazyloadenabled" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.lazyload.enabled">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        データのロードに遅延ロードを有効にする      </td>
      <td>false</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodelazyloadwaitTimeout" class="common-anchor-header"><code translate="no">queryNode.lazyload.waitTimeout</code><button data-href="#queryNodelazyloadwaitTimeout" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.lazyload.waitTimeout">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        遅延ロードの検索と取得を開始するまでの最大待機タイムアウト時間(ミリ秒)      </td>
      <td>30000</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodelazyloadrequestResourceTimeout" class="common-anchor-header"><code translate="no">queryNode.lazyload.requestResourceTimeout</code><button data-href="#queryNodelazyloadrequestResourceTimeout" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.lazyload.requestResourceTimeout">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        遅延ロードのためのリクエストリソースの待ち時間の最大タイムアウト(ミリ秒単位)。      </td>
      <td>5000</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodelazyloadrequestResourceRetryInterval" class="common-anchor-header"><code translate="no">queryNode.lazyload.requestResourceRetryInterval</code><button data-href="#queryNodelazyloadrequestResourceRetryInterval" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.lazyload.requestResourceRetryInterval">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        遅延ロードのリクエストリソース待ちの再試行間隔 (ミリ秒単位) デフォルト値 2s  </td>
      <td>2000</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodelazyloadmaxRetryTimes" class="common-anchor-header"><code translate="no">queryNode.lazyload.maxRetryTimes</code><button data-href="#queryNodelazyloadmaxRetryTimes" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.lazyload.maxRetryTimes">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        遅延ロードの最大再試行回数、デフォルトは 1 </td>
      <td>1</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodelazyloadmaxEvictPerRetry" class="common-anchor-header"><code translate="no">queryNode.lazyload.maxEvictPerRetry</code><button data-href="#queryNodelazyloadmaxEvictPerRetry" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.lazyload.maxEvictPerRetry">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        遅延ロードの最大evict回数、デフォルトは1      </td>
      <td>1</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeschedulermaxReadConcurrentRatio" class="common-anchor-header"><code translate="no">queryNode.scheduler.maxReadConcurrentRatio</code><button data-href="#queryNodeschedulermaxReadConcurrentRatio" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.scheduler.maxReadConcurrentRatio">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>maxReadConcurrentRatioは読み取りタスク（検索タスクおよびクエリ・タスク）の同時実行比率です。</li>      
        <li>最大読み取り同時実行率は、hardware.GetCPUNum * maxReadConcurrentRatioの値となる。</li>      
        <li>デフォルトは2.0であり、これは最大読み取り同時実行率がhardware.GetCPUNum * 2の値になることを意味する。</li>      
        <li>最大読み取り同時実行数は 1 以上、hardware.GetCPUNum * 100 以下でなければなりません。</li>      
        <li>(0, 100]</li>      </td>
      <td>1</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeschedulercpuRatio" class="common-anchor-header"><code translate="no">queryNode.scheduler.cpuRatio</code><button data-href="#queryNodeschedulercpuRatio" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.scheduler.cpuRatio">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        読み取りタスクの CPU 使用率の見積もりに使用される比率。      </td>
      <td>10</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeschedulerscheduleReadPolicyname" class="common-anchor-header"><code translate="no">queryNode.scheduler.scheduleReadPolicy.name</code><button data-href="#queryNodeschedulerscheduleReadPolicyname" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.scheduler.scheduleReadPolicy.name">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <li>fifo：スケジュールをサポートする FIFO キュー。</li>      
        <li>user-task-polling：</li>      
        <li>    ユーザーのタスクは1つずつポーリングされ、スケジューリングされる。</li>      
        <li>    スケジューリングはタスクの粒度で公平に行われる。</li>      
        <li>    ポリシーは、認証のためのユーザー名に基づいている。</li>      
        <li>    また、空のユーザー名は同一ユーザーとみなされる。</li>      
        <li>    マルチユーザーが存在しない場合、ポリシーはFIFOに減衰する。</li>      </td>
      <td>フィフォ</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeschedulerscheduleReadPolicytaskQueueExpire" class="common-anchor-header"><code translate="no">queryNode.scheduler.scheduleReadPolicy.taskQueueExpire</code><button data-href="#queryNodeschedulerscheduleReadPolicytaskQueueExpire" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.scheduler.scheduleReadPolicy.taskQueueExpire">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        キューが空になってから、キューが保持する時間 (何秒) を制御します。      </td>
      <td>60</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeschedulerscheduleReadPolicyenableCrossUserGrouping" class="common-anchor-header"><code translate="no">queryNode.scheduler.scheduleReadPolicy.enableCrossUserGrouping</code><button data-href="#queryNodeschedulerscheduleReadPolicyenableCrossUserGrouping" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.scheduler.scheduleReadPolicy.enableCrossUserGrouping">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        user-task-pollingポリシー使用時に、cross user groupingを有効にする。(ユーザのタスクが互いにマージできない場合は無効にする)      </td>
      <td>false</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeschedulerscheduleReadPolicymaxPendingTaskPerUser" class="common-anchor-header"><code translate="no">queryNode.scheduler.scheduleReadPolicy.maxPendingTaskPerUser</code><button data-href="#queryNodeschedulerscheduleReadPolicymaxPendingTaskPerUser" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.scheduler.scheduleReadPolicy.maxPendingTaskPerUser">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        スケジューラでのユーザごとの保留タスクの最大数      </td>
      <td>1024</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodedataSyncflowGraphmaxQueueLength" class="common-anchor-header"><code translate="no">queryNode.dataSync.flowGraph.maxQueueLength</code><button data-href="#queryNodedataSyncflowGraphmaxQueueLength" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.dataSync.flowGraph.maxQueueLength">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        クエリノードのフローグラフのタスクキューキャッシュの最大サイズ。      </td>
      <td>16</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodedataSyncflowGraphmaxParallelism" class="common-anchor-header"><code translate="no">queryNode.dataSync.flowGraph.maxParallelism</code><button data-href="#queryNodedataSyncflowGraphmaxParallelism" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.dataSync.flowGraph.maxParallelism">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        フローグラフ内で並列実行されるタスクの最大数      </td>
      <td>1024</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeenableSegmentPrune" class="common-anchor-header"><code translate="no">queryNode.enableSegmentPrune</code><button data-href="#queryNodeenableSegmentPrune" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.enableSegmentPrune">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        シャードデリゲータの検索/クエリでデータをプルーニングするためにパーティション統計を使用する      </td>
      <td>false</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodebloomFilterApplyParallelFactor" class="common-anchor-header"><code translate="no">queryNode.bloomFilterApplyParallelFactor</code><button data-href="#queryNodebloomFilterApplyParallelFactor" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.bloomFilterApplyParallelFactor">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        ブルームフィルタにpkを適用する際の並列係数、デフォルトは4*CPU_CORE_NUM      </td>
      <td>4</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodequeryStreamBatchSize" class="common-anchor-header"><code translate="no">queryNode.queryStreamBatchSize</code><button data-href="#queryNodequeryStreamBatchSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.queryStreamBatchSize">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        ストリームクエリのバッチサイズを返す      </td>
      <td>4194304</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeworkerPoolingsize" class="common-anchor-header"><code translate="no">queryNode.workerPooling.size</code><button data-href="#queryNodeworkerPoolingsize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.workerPooling.size">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        ワーカークエリノードのクライアントプールのサイズ      </td>
      <td>10</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeip" class="common-anchor-header"><code translate="no">queryNode.ip</code><button data-href="#queryNodeip" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.ip">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        queryNodeのTCP/IPアドレス。指定されていない場合は、最初のユニキャスト可能なアドレスを使用します。      </td>
      <td></td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodeport" class="common-anchor-header"><code translate="no">queryNode.port</code><button data-href="#queryNodeport" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.port">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        queryNodeのTCPポート      </td>
      <td>21123</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodegrpcserverMaxSendSize" class="common-anchor-header"><code translate="no">queryNode.grpc.serverMaxSendSize</code><button data-href="#queryNodegrpcserverMaxSendSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.grpc.serverMaxSendSize">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        queryNodeが送信できる各RPCリクエストの最大サイズ、単位：バイト      </td>
      <td>536870912</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodegrpcserverMaxRecvSize" class="common-anchor-header"><code translate="no">queryNode.grpc.serverMaxRecvSize</code><button data-href="#queryNodegrpcserverMaxRecvSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.grpc.serverMaxRecvSize">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        queryNodeが受信できる各RPCリクエストの最大サイズ、単位：バイト      </td>
      <td>268435456</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodegrpcclientMaxSendSize" class="common-anchor-header"><code translate="no">queryNode.grpc.clientMaxSendSize</code><button data-href="#queryNodegrpcclientMaxSendSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.grpc.clientMaxSendSize">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        queryNode上のクライアントが送信できる各RPCリクエストの最大サイズ、単位：バイト      </td>
      <td>268435456</td>
    </tr>
  </tbody>
</table>
<h2 id="queryNodegrpcclientMaxRecvSize" class="common-anchor-header"><code translate="no">queryNode.grpc.clientMaxRecvSize</code><button data-href="#queryNodegrpcclientMaxRecvSize" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><table id="queryNode.grpc.clientMaxRecvSize">
  <thead>
    <tr>
      <th class="width80">説明</th>
      <th class="width20">デフォルト値</th> 
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>        queryNode上のクライアントが受信できる各RPCリクエストの最大サイズ、単位：バイト      </td>
      <td>536870912</td>
    </tr>
  </tbody>
</table>
